Archive2/d7/1333d9dda92f06/output
main.cpp: In function 'int main()':
main.cpp:53:26: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type 'int'
     auto &l4  = foo4(list);
                          ^
main.cpp:53:11: warning: unused variable 'l4' [-Wunused-variable]
     auto &l4  = foo4(list);
           ^
